# flare

./: Cargo.toml  Dockerfile  README.md  connection_map.go  diceware.go  diceware_test.go  flare.go  go.mod  go.sum  handlers.go  types.go
.github/workflows/: docker.yml
src/: diceware.rs  main.rs  types.rs  websocket.rs
