[package]
name = "flare"
version = "1.0.0-alpha.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
clap = { version = "4.5.38", features = ["derive"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
headers = "0.4.0"
tokio = { version = "1.45.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-tungstenite = "0.26.0"
tower-http = { version = "0.6.1", features = ["trace", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dashmap = "6.1.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
